# BicycleSpedometer

./: CMakeLists.txt  spedo.c
